# checksum

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md
.claude/rules/: code-style.md  rules.md  testing.md
.github/workflows/: test.yml
.opencode/rules/: code-style.md  rules.md  testing.md
include/checksum/: checksum_str.h  crc32c.h  crc32c.hpp  md5.h  md5.hpp  sha256.h  sha256.hpp  xxhash3_128.h  xxhash3_64.h
include/checksum/detail/: arch.h  arch.hpp  attributes.h  attributes.hpp  base.h  base.hpp  call_once.h  common.h  common.hpp  compiler.h  compiler.hpp  cpu.h  cpu.hpp  endian.h  os_detect.h  os_detect.hpp
scripts/: test_arm.py  test_x86.py
src/: CMakeLists.txt  cpu.c  cpu.cpp  crc32c.c  crc32c.cpp  md5.c  md5.cpp  sha256.c  sha256.cpp  xxhash3_128.c  xxhash3_64.c
tests/: CMakeLists.txt  build.cpp  crc32c.cpp  dll.cpp  md5.cpp  sha256.cpp  str.cpp  utils.hpp  xxhash3_128.cpp  xxhash3_64.cpp
